# BTMagus

./: .gitignore  CMakeLists.txt  Makefile  MessageDispatcher.h  README.md  flipper_scan.cpp  flipper_scan.h  globals.cpp  globals.h  main.cpp
ble_spam/: ble_spam.cpp  ble_spam.h
core/: MessageDispatcher.h  globals.cpp  globals.h  message.h
flipper_scan/: flipper_scan.cpp  flipper_scan.h
